# syndrome

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
assets/img/: syndrome.jfif
docs/biochemical-trajectory-computing/: biochemical-trajectory-computing.tex
docs/cellular-infrastructure/: complete-cell.aux  complete-cell.tex  complete-cell.toc
docs/cellular-infrastructure/figures/: complete-cell.aux  complete-cell.bbl  complete-cell.blg  complete-cell.tex  references.bib
docs/cellular-infrastructure/sections/: complete-cellular-state-equations.tex  computational-architecture.tex  exhaustive-trajectory-exploration.tex  experimental-validation.tex  genome-charge-capacitor.tex  hardware-based-temporal-precision.tex  information-catalysis.tex  quantupartite-virtual-microscopy.tex  ternary-encoding.tex  unified-mechanistic-framework.tex
docs/cellular-state-equations/: README.md  partition-based-cellular-state-equations.aux  partition-based-cellular-state-equations.bbl  partition-based-cellular-state-equations.blg  partition-based-cellular-state-equations.tex  partition-based-cellular-state-equations.toc  references.bib
docs/cellular-state-equations/sections/: aperture-dynamics.tex  categorical-dynamics.tex  categorical-thermometry.tex  circuit-dynamics.tex  cytoplasmic-state-resolution.tex  electric-field-mechanism.tex  equations-of-state.tex  membrane-transport-demons.tex  metabolic-sequential-positioning.tex  partition-coordinates.tex  phase-lock-networks.tex  poincare-computing.tex  protein-folding-dynamics.tex  protein-function-reinterpretation.tex  proton-electron-coupling.tex  substrate-navigation.tex  ternary-encoding.tex  transport-phenomena.tex
docs/completion/: captions.tex  declaration.txt  trajectory-computing-paper.aux  trajectory-computing-paper.tex
docs/disease-state-equations/: COMPLETION_SUMMARY.md  README.md  disease-state-equations.aux  disease-state-equations.blg  disease-state-equations.tex  disease-state-equations.toc
docs/disease-state-equations/sections/: categorical-differential-equations.tex  categorical-memory-reset.tex  circuit-dynamics.tex  cytoplasmic-state-resolution.tex  disease-categories.tex  electric-field-mechanism.tex  equations-of-state.tex  immune-equations-of-state.tex  (+8 more)
docs/multimodal-reaction-localization/: multimodal-reaction-localization.aux  multimodal-reaction-localization.bbl  multimodal-reaction-localization.blg  multimodal-reaction-localization.tex  references.bib
docs/observation-equations/: cellular-observation-equations.tex
publication/: disease-computing-framework.tex
publication/disease-computing/: captions.tex  disease-computing-framework.tex  references.bib
publication/disease-state-equations/: captions.tex  disease-partition-state-equations.tex  references.bib
results/: validation_summary.json
results/coherence/: coherence_results.csv  coherence_results.json
results/disease/: disease_results.csv  disease_results.json
results/partition/: partition_results.csv  partition_results.json
results/thermodynamic/: thermodynamic_results.csv  thermodynamic_results.json
results/trajectory/: trajectory_results.csv  trajectory_results.json
syndrome/: __init__.py
syndrome-rs/: Cargo.toml
syndrome-rs/src/: coherence.rs  disease.rs  error.rs  lib.rs  main.rs  operators.rs  partition.rs  s_entropy.rs  trajectory.rs
syndrome/core/: __init__.py  coherence.py  disease.py  operators.py  partition.py  s_entropy.py  trajectory.py
syndrome/oscillators/: __init__.py
syndrome/validation/: __init__.py  coherence_validation.py  disease_validation.py  partition_validation.py  runner.py  thermodynamic_validation.py  trajectory_validation.py  types.py
visualizations/: __init__.py  generate_all.py  paper1_panels.py  paper2_panels.py
(+17 files in other folders)
