[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syndrome"
version = "0.1.0"
description = "Categorical Resolution of Disease Trajectories Through Partition Geometry and Oscillator Coherence"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kundai Farai Sachikonye", email = "kundai.sachikonye@wzw.tum.de"}
]
maintainers = [
    {name = "Kundai Farai Sachikonye", email = "kundai.sachikonye@wzw.tum.de"}
]
keywords = [
    "disease trajectory",
    "partition geometry",
    "oscillator coherence",
    "categorical dynamics",
    "computational biology",
    "systems biology",
    "disease classification"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
all = [
    "syndrome[dev,docs,viz]",
]

[project.urls]
Homepage = "https://github.com/kundai-sachikonye/syndrome"
Documentation = "https://syndrome.readthedocs.io"
Repository = "https://github.com/kundai-sachikonye/syndrome"
Issues = "https://github.com/kundai-sachikonye/syndrome/issues"

[project.scripts]
syndrome-validate = "syndrome.validation.runner:main"

[tool.setuptools]
packages = ["syndrome", "syndrome.core", "syndrome.oscillators", "syndrome.validation"]

[tool.setuptools.package-data]
syndrome = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["syndrome"]

[tool.black]
line-length = 100
target-version = ["py310"]
